# cjm-fasthtml-app-core

./: MANIFEST.in  README.md  demo_app.py  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
cjm_fasthtml_app_core/: _modidx.py
cjm_fasthtml_app_core/components/: alerts.py  confirm_modal.py  empty_state.py  navbar.py  step_header_band.py
cjm_fasthtml_app_core/core/: errors.py  html_ids.py  htmx.py  layout.py  routing.py
components/: alerts.html  alerts.html.md  confirm_modal.html  confirm_modal.html.md  empty_state.html  empty_state.html.md  navbar.html  navbar.html.md  step_header_band.html  step_header_band.html.md
core/: errors.html  errors.html.md  html_ids.html  html_ids.html.md  htmx.html  htmx.html.md  layout.html  layout.html.md  routing.html  routing.html.md
nbs/: index.ipynb  nbdev.yml
nbs/components/: alerts.ipynb  confirm_modal.ipynb  empty_state.ipynb  navbar.ipynb  step_header_band.ipynb
nbs/core/: errors.ipynb  html_ids.ipynb  htmx.ipynb  layout.ipynb  routing.ipynb
