[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-app-core"
dynamic = ["version"]
description = "Core utilities and reusable patterns for FastHTML applications including page layouts, HTMX request handling, alerts, and navbar components."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm_fasthtml_daisyui', 'cjm_error_handling']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-app-core"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-app-core"

[project.entry-points.nbdev]
cjm_fasthtml_app_core = "cjm_fasthtml_app_core._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_app_core.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_app_core"]

[tool.nbdev]
